Bug 150236 - Does not open full screen, ooSetupFactoryWindowAttributes not being filled ( steps in comment 21 ) ( LibreOffice 7.4 only )
Summary: Does not open full screen, ooSetupFactoryWindowAttributes not being filled ( ...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.0.0 beta1+
Hardware: x86-64 (AMD64) Windows (All)
: high normal
Assignee: Not Assigned
URL: https://ask.libreoffice.org/t/libreof...
Whiteboard: target:7.4.1
Keywords: bibisected, bisected, regression
: 149957 150003 150212 150478 150482 150485 150493 150513 150536 150580 150584 150636 150661 150669 150672 150713 150722 150747 150772 150919 150944 151026 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-02 19:20 UTC by jlerner10
Modified: 2023-05-12 08:15 UTC (History)
33 users (show)

See Also:
Crash report or crash signature:


Attachments
cgit of 8b6000f in 7.4.0 (55.69 KB, image/png)
2022-08-16 18:13 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jlerner10 2022-08-02 19:20:41 UTC Comment hidden (obsolete)
Comment 1 V Stuart Foote 2022-08-04 14:16:01 UTC Comment hidden (obsolete)
Comment 2 jlerner10 2022-08-04 15:50:06 UTC
I tried resetting the Profile. That did not fix the problem.
I did a complete uninstall which included cleaning the Registry and then reinstalled LO.

The problem is still there.

So to make it work I reapplied the Run: Maximize.

For now that solves my problem.
Comment 3 V Stuart Foote 2022-08-04 18:28:34 UTC Comment hidden (obsolete)
Comment 4 jlerner10 2022-08-05 08:08:00 UTC
Found this.
https://ask.libreoffice.org/t/libreoffice-7-4-does-not-open-in-a-maximized-window/80124

Seems like I am not the only one with this problem.

It is a bug.
Comment 5 V Stuart Foote 2022-08-05 15:37:15 UTC
Confirmed on a 7.4.0.2 build.

Seems like the frame values for ooSetupFactoryWindowAttributes are not actually being written into user profile (registrymodifications.xcu). The XML stanzas are there, but the value is blank.

No change to source setup.xcu, so not clear why profile is not being populated.

With recent build of master against 7.5.0 they are present. And they were present in 7.3.4.2 with a cleared user profile.

=-ref-=
Version: 7.4.0.2 (x64) / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 6 jlerner10 2022-08-05 17:06:47 UTC
I uninstalled LO 7.4.0.2 and reinstalled LO 7.3.5.2 and so far it opens normally (Maximized/Full screen) without having to make the Run: change.
Comment 7 Adam 2022-08-13 15:57:06 UTC
This bug still exist on LO 7.4.0.3.
Comment 8 V Stuart Foote 2022-08-13 17:19:48 UTC
Confirmed

/a administrative install of
Version: 7.4.0.3 (x64) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

No values for ooSetupFactoryWindowAttributes are being written into user proile. The stanzas are there for modules that are launched, but they remain empty.

While no issue with recent builds of master against 7.5, something is off with the 7.4 build and needs a tweak.
Comment 9 V Stuart Foote 2022-08-13 17:23:46 UTC
@Xisco, Cloph -- a blocker?
Comment 10 Mike Kaganski 2022-08-13 18:54:31 UTC
(In reply to V Stuart Foote from comment #9)

It can't ever be a blocker, or even a major. It does not make work with the program impossible, or make it difficult - it is minor, even if regression.

(In reply to jlerner10 from comment #0)
> Steps to Reproduce:
> 2.Double click LO desktop icon to open
> 
> Actual Results:
> Opens to 3/4 screen
> 
> Expected Results:
> Should open maximized or full screen.

Why? Either I do not understand something, or there is no good steps yet here.
Comment 11 Adam 2022-08-13 19:30:01 UTC
LO 7.4.x does not remember the last used window position and size, which may annoy a lot of users.
Comment 12 V Stuart Foote 2022-08-13 19:34:29 UTC
(In reply to Mike Kaganski from comment #10)
> (In reply to V Stuart Foote from comment #9)
> 
> It can't ever be a blocker, or even a major. It does not make work with the
> program impossible, or make it difficult - it is minor, even if regression.
> 

Sure, and it is even resolved for 7.5.0; but why allow it out when it could be avoided, probably with minimal effort. Kind of the point of doing multiple betas for pending major releases. Seems something trivial has slipped. Take care of it now to limit any bad feelings for early testers/adopters.

> (In reply to jlerner10 from comment #0)
> > Steps to Reproduce:
> > 2.Double click LO desktop icon to open
> > 
> > Actual Results:
> > Opens to 3/4 screen
> > 
> > Expected Results:
> > Should open maximized or full screen.
> 
> Why? Either I do not understand something, or there is no good steps yet
> here.

On Windows at least, we get no recording to profile of each modules placement and frame size. So the modules will open in unexpected locations and sizes--especially as compared to workflows with prior releases.
Comment 13 Mike Kaganski 2022-08-13 19:43:08 UTC
(In reply to V Stuart Foote from comment #12)
So is there a "open LibreOffice, expand it to full screen, and close" step before step 2 missing? Initially I assumed you all were talking about a shortcut properties - e.g., on Windows, you may assign such settings to shortcuts; and I assumed that it was "set up shortcut to open fullscreen" step that was missing.
Comment 14 V Stuart Foote 2022-08-13 20:44:59 UTC
(In reply to Mike Kaganski from comment #13)
> (In reply to V Stuart Foote from comment #12)
> So is there a "open LibreOffice, expand it to full screen, and close" step
> before step 2 missing? Initially I assumed you all were talking about a
> shortcut properties - e.g., on Windows, you may assign such settings to
> shortcuts; and I assumed that it was "set up shortcut to open fullscreen"
> step that was missing.

No. With a clean profile. swriter.exe, scalc.exe, sdraw.exe open to full screen. But with soffice.exe (StartCenter) open, first module opens to the StartCenter frame size.  Next module launched *also* gets the frame size for the StartCenter.

For release builds before 7.4.0.1 and in 7.5.0alpha0+, next module gets its size from ooSetupFactoryWindowAttributes values (IIUC) recorded to user profile. But expect that is just a manifestation of the actual issue.

I can not judge for sure because I can't follow how it is plumbed to write back to profile, but there was Jan-Marek's refactoring vcl::WindowPosSize [1] in ea5a0918c8c32309821ab239c4b95f4d6a3b5c12 that is in at 7.4.0.1

=-ref-=

https://gerrit.libreoffice.org/c/core/+/135426
Comment 15 Mike Kaganski 2022-08-14 07:03:35 UTC
Sigh.

I do not see what specific steps I need to do in LibreOffice before and after 7.4.0.1 to compare. I try with 7.3.0.3, and I see the same as with 7.4.0.2. I would expect at least experienced contributors like V Stuart Foote to understand the importance of exact steps.

* I clean user profile using Help->Restart in Safe Mode (I check both options under Reset to factory settings, and Apply changes and restart).
* I see the start center opening in windowed mode.
* I close it without any resize or move.
* I run swriter.exe
* I see it opened in full screen
* I close it without a resize or move
* I run soffice.exe and it is again in windowed mode, as expected
* Without closing or resize or move, I run swriter.exe and see it replacing start center in its windowed mode (as expected)
* I start swriter.exe again, and see a new Writer window in windowed mode

**both with 7.3.0.3 and 7.4.0.2 (with profiles cleared separately for each).**
Comment 16 Mike Kaganski 2022-08-14 07:10:51 UTC
(In reply to Mike Kaganski from comment #15)
> * I start swriter.exe again, and see a new Writer window in windowed mode

Likely I messed up with this step the first time - with 7.3.0.3, after a re-check, I see that the second Writer opened full screen (but 7.4.0.2 continues behaving as I wrote above). Maybe that was the difference that is discussed here?
Comment 17 V Stuart Foote 2022-08-14 08:13:45 UTC
@Mike, I'm sorry I didn't think specific steps were relevant here. 

The OP's "Not open full screen" is just the most obvious, but issue affects any of the potential WindowState modes, or a recorded screen size & position.

Instead, one can directly examine settings recorded to registrymodifications.xcu for each module's ooSetupFactoryWindowAttributes stanza.

They are populated with position and mode details for builds prior to 7.4.0.1 through 7.4.0.3, and are again populated in current builds of master against 7.5.0alpha0+

So something was completed for master that did not get back ported to 7.4.0
Comment 18 Mike Kaganski 2022-08-14 08:41:49 UTC
Then what is required is two bibisects, one for the regression, another for the fix. If the latter is not possible at the moment, e.g. because 7-5 bibisect repo has not been updated yet, it's perfectly OK to have 7.4.0 released with this minor issue, and bibisect at a later time. No reason to spend much time trying to bisect or debug.
Comment 19 V Stuart Foote 2022-08-14 16:24:43 UTC
(In reply to Mike Kaganski from comment #18)
> Then what is required is two bibisects, one for the regression, another for
> the fix. If the latter is not possible at the moment, e.g. because 7-5
> bibisect repo has not been updated yet, it's perfectly OK to have 7.4.0
> released with this minor issue, and bibisect at a later time. No reason to
> spend much time trying to bisect or debug.

Yes, agree. Should note the impact on users upgrading. As each LO module is launched its window state is being corrupted with empty values recorded back to .xcu profile.  Clearing the profile has each module start with empty values, but folks migrating will loose UI configuration of their desktop.  

It is a major release, so guess we can accept clobbering profiles for early testers/adopters--but it will be an annoyance. Avoidable?
Comment 20 jlerner10 2022-08-14 17:04:58 UTC
I do hope this gets fixed before it gets to be the final release version.
It will be annoying if you have to maximize the modules each time you start LO.

Still on LO 7.3.5.2

Thanks to all who have responded.
Comment 21 Xisco Faulí 2022-08-16 16:58:21 UTC
I'm sorry but the steps were not clear at all, it took me more than an hour to find the way to reproduce it...

Steps to reproduce:
1. Clean the profile
2. Launch soffice
3. Open writer from the start center
4. Maximize the window
5. Close LibreOffice
6. Launch Writer

-> it should be maximized
Comment 22 V Stuart Foote 2022-08-16 17:00:18 UTC
(In reply to Xisco Faulí from comment #21)
> I'm sorry but the steps were not clear at all, it took me more than an hour
> to find the way to reproduce it...
> 
> Steps to reproduce:
> 1. Clean the profile
> 2. Launch soffice
> 3. Open writer from the start center
> 4. Maximize the window
> 5. Close LibreOffice
> 6. Launch Writer
> 
> -> it should be maximized

Yep, like that. Or you could just look in the user profile for any launch ;-)
Comment 23 Xisco Faulí 2022-08-16 17:12:15 UTC
In master, this issue got fixed by

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8b6000f6075725b2e17b8fa745251ea96d7185f1
Comment 24 V Stuart Foote 2022-08-16 17:49:39 UTC Comment hidden (obsolete)
Comment 25 Xisco Faulí 2022-08-16 17:57:27 UTC Comment hidden (obsolete)
Comment 26 V Stuart Foote 2022-08-16 18:13:17 UTC Comment hidden (obsolete)
Comment 27 Xisco Faulí 2022-08-17 08:39:14 UTC
Regression introduced by:

author	Luboš Luňák <l.lunak@collabora.com>	2022-06-09 18:23:44 +0200
committer	Caolán McNamara <caolanm@redhat.com>	2022-06-20 10:07:32 +0200
commit 8b46093b27b065ac9b537348ed909530b5ffd588 (patch)
tree 1073ee425b698f56a5bab4d88f4206e69485e1e0
parent fee9ef889ac85c6758aef9fb2b8101424cf3c870 (diff)
avoid uninitialized data when handling WindowState

Bisected with: win64-7.4

Adding Cc: to Luboš Luňák
Comment 28 V Stuart Foote 2022-08-19 05:23:09 UTC
*** Bug 149957 has been marked as a duplicate of this bug. ***
Comment 29 V Stuart Foote 2022-08-19 05:23:26 UTC
*** Bug 150478 has been marked as a duplicate of this bug. ***
Comment 30 V Stuart Foote 2022-08-19 05:23:45 UTC
*** Bug 150482 has been marked as a duplicate of this bug. ***
Comment 31 V Stuart Foote 2022-08-19 05:23:54 UTC
*** Bug 150485 has been marked as a duplicate of this bug. ***
Comment 32 V Stuart Foote 2022-08-19 05:25:52 UTC
*** Bug 150003 has been marked as a duplicate of this bug. ***
Comment 33 V Stuart Foote 2022-08-19 05:39:44 UTC
*** Bug 150212 has been marked as a duplicate of this bug. ***
Comment 34 Xisco Faulí 2022-08-19 09:14:33 UTC
*** Bug 150493 has been marked as a duplicate of this bug. ***
Comment 35 gfowler1 2022-08-19 13:45:08 UTC
Windows users simple temp workaround:

1. On the desktop icon: Right click -> Properties

2. Change "Run:" to "Maximized"
Comment 36 Xisco Faulí 2022-08-19 14:15:44 UTC
My take on it, to revert the problematic commit only in libreoffice-7-4 branch: https://gerrit.libreoffice.org/c/core/+/138534
Comment 37 Kim 2022-08-19 23:40:50 UTC Comment hidden (obsolete)
Comment 38 Kim 2022-08-19 23:48:35 UTC
(In reply to gfowler1 from comment #35)
> Windows users simple temp workaround:
> 
> 1. On the desktop icon: Right click -> Properties
> 
> 2. Change "Run:" to "Maximized"

This is only a satisfactory workaround if you are in the habit of running LO maximised. No window size or position is remembered, maximised or other.
(Sorry, replied to wrong comment just now.)
Comment 39 Faisal 2022-08-21 17:18:46 UTC
*** Bug 150536 has been marked as a duplicate of this bug. ***
Comment 40 Alexander Berg 2022-08-21 17:39:50 UTC
"KamilLanda: Yes, the bug is in 7.4.0.1 and 7.4.0.2, but I tested it in 7.5.0.0.alpha0+ and it is OK"
Comment 41 Rafael Lima 2022-08-21 20:50:21 UTC
*** Bug 150513 has been marked as a duplicate of this bug. ***
Comment 42 Commit Notification 2022-08-23 09:31:11 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/105d129683b0e88bbb8e682d308786a587aa895f

tdf#150236: Revert "avoid uninitialized data when handling WindowState"

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 43 Alexander Berg 2022-08-23 12:29:59 UTC Comment hidden (off-topic)
Comment 44 Xisco Faulí 2022-08-23 14:44:56 UTC
Since this issue is only reproducible in libreoffice-7-4 branch and the problematic commit has been reverted in that branch, we can call this issue fixed. Please test it with a daily build from https://dev-builds.libreoffice.org/daily/libreoffice-7-4/Win-x86_64@tb77-TDF/current/?C=N&O=D ( wait one or two days until a new build is created containing the revert patch )
Comment 45 Mike Kaganski 2022-08-24 10:00:42 UTC
*** Bug 150580 has been marked as a duplicate of this bug. ***
Comment 46 Mike Kaganski 2022-08-24 15:04:35 UTC
*** Bug 150584 has been marked as a duplicate of this bug. ***
Comment 47 Mark 2022-08-24 18:03:19 UTC
Tested nightly build dated 8-23-2022 Issue appears to have been fixed.
Comment 48 V Stuart Foote 2022-08-24 19:57:40 UTC
With commit of comment 42, in a nightly build against 7.4.1, component windows are again opening as set and the ooSetupFactoryWindowAttributes are receiving values.

=-testing-=

Version: 7.4.1.0.0+ (x64) / LibreOffice Community
Build ID: 34edaf8249107c4216fdaffe450d287a1908a0de
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 49 alan.german 2022-08-24 20:04:40 UTC
Version 7.4.1.0.0, obtained from nightly builds, also fixes the dual-monitor issue of Writer loading on the wrong monitor at the wrong size (originally reported as Bug No. 150485)
Comment 50 Jim Byram 2022-08-24 20:49:22 UTC
Using version 7.4.1.0.0, obtained from nightly builds...

If I open Writer or Calc and set the window position and size, close the program, and reopen them, the window position and size are retained. So the issue is fixed.

However, for example, if I then select a .odt file, right-click and select Open with / LibreOffice, when the document is opened, the position and window size that I set previously is not respected.

So the issue persists in a different context.
Comment 51 Xisco Faulí 2022-08-25 21:14:52 UTC
(In reply to Jim Byram from comment #50)
> Using version 7.4.1.0.0, obtained from nightly builds...
> 
> If I open Writer or Calc and set the window position and size, close the
> program, and reopen them, the window position and size are retained. So the
> issue is fixed.
> 
> However, for example, if I then select a .odt file, right-click and select
> Open with / LibreOffice, when the document is opened, the position and
> window size that I set previously is not respected.
> 
> So the issue persists in a different context.

Hi Jim, all,
Thansk for testing this issue.
Could you please create a follow-up report for the second issue?
Comment 52 Xisco Faulí 2022-08-25 21:15:24 UTC
Closing this one
Comment 53 V Stuart Foote 2022-08-28 10:09:25 UTC
*** Bug 150636 has been marked as a duplicate of this bug. ***
Comment 54 Ming Hua 2022-08-29 08:27:19 UTC
*** Bug 150661 has been marked as a duplicate of this bug. ***
Comment 55 Mike Kaganski 2022-08-30 04:08:10 UTC
*** Bug 150669 has been marked as a duplicate of this bug. ***
Comment 56 Mike Kaganski 2022-08-30 04:09:42 UTC
*** Bug 150672 has been marked as a duplicate of this bug. ***
Comment 57 Mike Kaganski 2022-08-31 04:59:47 UTC
*** Bug 150713 has been marked as a duplicate of this bug. ***
Comment 58 Mike Kaganski 2022-08-31 15:13:32 UTC
*** Bug 150722 has been marked as a duplicate of this bug. ***
Comment 59 V Stuart Foote 2022-09-01 22:42:25 UTC
*** Bug 150747 has been marked as a duplicate of this bug. ***
Comment 60 Mike Kaganski 2022-09-04 04:49:22 UTC
*** Bug 150772 has been marked as a duplicate of this bug. ***
Comment 61 V Stuart Foote 2022-09-12 21:27:21 UTC
*** Bug 150919 has been marked as a duplicate of this bug. ***
Comment 62 Boaz Dodin 2022-09-13 13:48:16 UTC
Not sure if it's the same issue, by LO is not visible for me upon launching (but looks like it opened off-screen, to the upper-left corner and beyond), till I set "Maximize" via the right click.

Version: 7.4.1.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: he-IL (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.4.1~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded

Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.6
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-47-generic (64-bit)
Graphics Platform: X11
Processors: 4 × AMD A8-6500T APU with Radeon(tm) HD Graphics
Memory: 7.0 GiB of RAM
Graphics Processor: AMD ARUBA
Comment 63 Timur 2022-09-13 14:02:05 UTC
Boaz, it's more likely KDE specific, like bug 150779 that's also 7.4 and not master 7.5+.
Comment 64 Xisco Faulí 2022-09-14 07:50:39 UTC
*** Bug 150944 has been marked as a duplicate of this bug. ***
Comment 65 V Stuart Foote 2022-09-17 14:01:09 UTC
*** Bug 151026 has been marked as a duplicate of this bug. ***
Comment 66 Alexander Berg 2022-09-18 07:49:51 UTC
In version 7.4.1.x the phenomenon is solved.
Comment 67 m_a_riosv 2022-09-19 20:43:21 UTC
*** Bug 151067 has been marked as a duplicate of this bug. ***
Comment 68 Drew Binsky 2023-05-12 07:12:21 UTC Comment hidden (spam)