tdf#150236: Revert "avoid uninitialized data when handling WindowState"

This reverts commit 8b46093b27b065ac9b537348ed909530b5ffd588.

Reason for revert: Considering the number of bugs already reported
for this issue since LibreOffice 7.4 was released, I would like
to revert this commit only on libreoffice-7-4 branch.
In master, the issue got fixed by 8b6000f6075725b2e17b8fa745251ea96d7185f1
< WIN drop window state redundancies > but reading the discussion
in https://gerrit.libreoffice.org/c/core/+/135809, it might be risky
to backport it to libreoffice-7-4, thus I prefer to revert this patch

Change-Id: I5c78d165afed59a3d578f53356682425c9de2cd3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138534
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>