vcl/source/window/syswin.cxx
@@ -755,10 +755,7 @@ void SystemWindow::GetWindowState(vcl::WindowData& rData) const
         return;
 
     if ( mbSysChild )
-    {
-        rData.setMask( vcl::WindowDataMask::NONE );
         return;
-    }
 
     const vcl::Window* pWindow = this;
     while ( pWindow->mpWindowImpl->mpBorderWindow )
@@ -767,11 +764,9 @@ void SystemWindow::GetWindowState(vcl::WindowData& rData) const
     if ( pWindow->mpWindowImpl->mbFrame )
     {
         vcl::WindowData aState;
+        aState.setMask(vcl::WindowDataMask::All);
         if ( mpWindowImpl->mpFrame->GetWindowState( &aState ) )
         {
-            // Limit mask only to what we've received, the rest is not set.
-            nValidMask &= aState.mask();
-            rData.setMask( nValidMask );
             if ( nValidMask & vcl::WindowDataMask::X )
                 rData.setX( aState.x() );
             if ( nValidMask & vcl::WindowDataMask::Y )
@@ -780,14 +775,26 @@ void SystemWindow::GetWindowState(vcl::WindowData& rData) const
                 rData.setWidth( aState.width() );
             if ( nValidMask & vcl::WindowDataMask::Height )
                 rData.setHeight( aState.height() );
-            if ( nValidMask & vcl::WindowDataMask::MaximizedX )
+            if ( aState.mask() & vcl::WindowDataMask::MaximizedX )
+            {
                 rData.SetMaximizedX( aState.GetMaximizedX() );
-            if ( nValidMask & vcl::WindowDataMask::MaximizedY )
+                nValidMask |= vcl::WindowDataMask::MaximizedX;
+            }
+            if ( aState.mask() & vcl::WindowDataMask::MaximizedY )
+            {
                 rData.SetMaximizedY( aState.GetMaximizedY() );
-            if ( nValidMask & vcl::WindowDataMask::MaximizedWidth )
+                nValidMask |= vcl::WindowDataMask::MaximizedY;
+            }
+            if ( aState.mask() & vcl::WindowDataMask::MaximizedWidth )
+            {
                 rData.SetMaximizedWidth( aState.GetMaximizedWidth() );
-            if ( nValidMask & vcl::WindowDataMask::MaximizedHeight )
+                nValidMask |= vcl::WindowDataMask::MaximizedWidth;
+            }
+            if ( aState.mask() & vcl::WindowDataMask::MaximizedHeight )
+            {
                 rData.SetMaximizedHeight( aState.GetMaximizedHeight() );
+                nValidMask |= vcl::WindowDataMask::MaximizedHeight;
+            }
             if ( nValidMask & vcl::WindowDataMask::State )
             {
                 // #94144# allow Minimize again, should be masked out when read from configuration
@@ -807,8 +814,6 @@ void SystemWindow::GetWindowState(vcl::WindowData& rData) const
         Size    aSize = GetSizePixel();
         vcl::WindowState nState = vcl::WindowState::NONE;
 
-        nValidMask &= vcl::WindowDataMask::PosSizeState;
-        rData.setMask( nValidMask );
         if (nValidMask & vcl::WindowDataMask::X)
             rData.setX(aPos.X());
         if (nValidMask & vcl::WindowDataMask::Y)
